--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
 		}
 		#content div:nth-child(even){
 			background: #777;
-			padding: 30px;
 		}
-		.nested{
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-			grid-gap: 10px;
-			/*grid-column: span 3;*/
-		}
-		.nested p{
-			border: 1px solid #fff;
-			padding: 20px;
-			margin: 0;
+
 		}
 	</style>
 </head>
@@ -43,16 +33,10 @@
 		<div>1</div>
 		<div>2</div>
 		<div>3</div>
-
-		<div class="nested">
-			<p>1</p>
-			<p>2</p>
-			<p>3</p>
-			<p>4</p>
-		</div>
-
+		<div>4</div>
 		<div>5</div>
 		<div>6</div>
+
 
 	</div>
 
