--- a/index.html
+++ b/index.html
@@ -15,38 +15,41 @@
 			grid-gap: 10px;
 			max-width: 960px;
 			margin: 0 auto;
-			/*align-items: start;*/
-			/*justify-items: start;*/
+
 		}
 		#content div{
 			background: #3bbced;
 			padding: 30px;
-			/*justify-self: start;*/
-			/*align-self: start;*/
+
 		}
 		#content div:nth-child(even){
 			background: #777;
-			padding: 30px;
 		}
 		.one{
+			justify-self: end;
 			align-self: end;
-			justify-self: start;
 		}
 		.two{
-			align-self: center;
-			justify-self: center;
-		}
-		.three{
-			align-self: start;
-			justify-self: end;
-		}
+		align-self:center;
+		justify-self:center;
+	}
+
+	.three{
+		align-self:start;
+		justify-self:start;
+	}
+
+
+
+
+
 	</style>
 </head>
 <body>
 
 	<div id="content">
 
-		<div class="one">1 with content</div>
+		<div class="one">1</div>
 		<div class="two">2</div>
 		<div class="three">3</div>
 		<div class="four">4</div>
