--- a/index.html
+++ b/index.html
@@ -8,24 +8,8 @@
 			font-family: 'Nunito Semibold';
 			text-align: center;
 		}
-        #content{
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-auto-rows: minmax(100px, auto);
-            grid-gap: 10px;
-            max-width: 960px;
-            margin: 0 auto;
-            grid-template-areas:
-                "header header header header"
-                "footer footer footer footer"
-                "main main main main"
-                "main main main main"
-                "aside aside nav nav"
-                "section section section section"
-                "section section section section";
-        }
+
         /* desktop grid */
-        @media screen and (min-width: 760px){
     		#content{
     			display: grid;
     			grid-template-columns: repeat(4, 1fr);
@@ -40,7 +24,7 @@
                     "section section section section"
                     "section section section section"
                     "footer footer footer footer";
-    		}
+
         }
 		#content > *{
 			background: #3bbced;
@@ -63,7 +47,7 @@
         }
         footer{
             grid-area: footer;
-            background: #333 !important;
+            background: #333;
         }
 	</style>
 </head>
